--- a/src/main/resources/templates/aluno/cadastrar.html
+++ b/src/main/resources/templates/aluno/cadastrar.html
@@ -27,8 +27,8 @@
 					</div>
 					<div class="row">
 						<div class="input-field col s12">
-							<input id="dataNascimento" type="date" class="datepicker"
-								th:field="*{dataNascimento}" /> <label for="dataNascimento">Dt.
+							<input id="data_nascimento" type="date" class="datepicker"
+								th:field="*{data_nascimento}" /> <label for="data_nascimento">Dt.
 								Nascimento</label>
 						</div>
 					</div>
