--- a/src/main/resources/templates/aluno/cadastrar.html
+++ b/src/main/resources/templates/aluno/cadastrar.html
@@ -9,7 +9,8 @@
 <title>EscolAlura</title>
 <script type="text/javascript"
 	src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="../js/inicializar.js"></script>
+<script type="text/javascript" src="../materialize/js/inicializar.js"></script>
+<script type="text/javascript" src="../js/googlemaps.js"></script>
 </head>
 <body class="grey lighten-3">
 	<div id="formularioEdicao" class="container">
@@ -38,6 +39,13 @@
 								th:field="*{curso.nome}" /> <label for="curso">Curso</label>
 						</div>
 					</div>
+					<div class="row">
+						<div class="input-field col s12">
+							<input id="endereco" type="text" class="validate"
+								th:field="*{contato.endereco}" /> <label for="endereco">Endereço</label>
+						</div>
+					</div>
+
 
 				</div>
 				<!-- Fim SECTION Dados Basicos -->
@@ -53,7 +61,9 @@
 
 	</div>
 	<!-- Fim do formulario de edicao -->
-
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIPw0BOFbsavl2S0XJm366GqIL8WaL4xw&amp;libraries=places&amp;callback=autoComplete"
+		async="async" defer="defer"></script>
 	<script type="text/javascript"
 		src="../materialize/js/materialize.min.js"></script>
 </body>
